[workspace]

members = [
    "necsim/core",
    "necsim/core/bond",

    "necsim/impls/no-std",
    "necsim/impls/std",
    "necsim/impls/cuda",

    "necsim/plugins/core",
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",
    "necsim/plugins/demo",

    "necsim/partitioning/core",
    "necsim/partitioning/monolithic",
    "necsim/partitioning/mpi",

    "rustcoalescence",

    "rustcoalescence/linker",

    "rustcoalescence/scenarios",

    "rustcoalescence/algorithms",
    "rustcoalescence/algorithms/monolithic",
    "rustcoalescence/algorithms/independent",
    "rustcoalescence/algorithms/cuda",
    "rustcoalescence/algorithms/cuda/kernel",
    "rustcoalescence/algorithms/cuda/kernel/specialiser",
    "rustcoalescence/algorithms/cuda/kernel/ptx-jit",

    "rust-cuda",
    "rust-cuda/rust-cuda-derive",

    "analysis/rng/randomness",
    "analysis/rng/hash",
    "analysis/rng/correlation",
    "analysis/performance/exponential",
    "analysis/performance/exponential/kernel",
    "analysis/performance/reporting",
]

default-members = [
    "rustcoalescence",
    
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",
    "necsim/plugins/demo",
]

[profile.release]
opt-level = 3
lto = "fat"
