[workspace]

members = [
    "necsim/core",
    "necsim/core/bond",

    "necsim/impls/no-std",
    "necsim/impls/std",
    "necsim/impls/cuda",

    "necsim/plugins/core",
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",

    "necsim/partitioning/core",
    "necsim/partitioning/monolithic",
    "necsim/partitioning/mpi",

    "rustcoalescence",

    "rustcoalescence/scenarios",

    "rustcoalescence/algorithms",
    "rustcoalescence/algorithms/monolithic",
    "rustcoalescence/algorithms/independent",
    "rustcoalescence/algorithms/cuda",
    "rustcoalescence/algorithms/cuda/kernel",

    "rust-cuda",
    "rust-cuda/rust-cuda-derive",
    "rust-cuda/rust-cuda-ptx-jit",
]

default-members = [
    "rustcoalescence",
    
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",
]

[profile.release]
opt-level = 3
lto = "fat"
