[workspace]

members = [
    "necsim/core",
    "necsim/core/bond",
    "necsim/core/maths",

    "necsim/impls/no-std",
    "necsim/impls/std",
    "necsim/impls/cuda",

    "necsim/plugins/core",
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",
    "necsim/plugins/tskit",

    "necsim/partitioning/core",
    "necsim/partitioning/monolithic",
    "necsim/partitioning/mpi",

    "rustcoalescence",

    "rustcoalescence/scenarios",

    "rustcoalescence/algorithms",
    "rustcoalescence/algorithms/gillespie",
    "rustcoalescence/algorithms/independent",
    "rustcoalescence/algorithms/cuda",
    "rustcoalescence/algorithms/cuda/gpu-kernel",
    "rustcoalescence/algorithms/cuda/cpu-kernel",
]

default-members = [
    "rustcoalescence",
    
    "necsim/plugins/common",
    "necsim/plugins/csv",
    "necsim/plugins/metacommunity",
    "necsim/plugins/statistics",
    "necsim/plugins/species",
    "necsim/plugins/tskit",
]

[profile.release]
opt-level = 3
lto = "fat"
