[package]
name = "float_next_after"
version = "0.1.5"
authors = ["Bronson Brown-deVost <bronsonbdevost@gmail.com>"]
description = "A trait for native rust f64/f32 nextafter"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bronsonbdevost/next_afterf"
repository = "https://gitlab.com/bronsonbdevost/next_afterf"
keywords = ["float", "f64", "f32", "nextafter", "increment"]
categories = ["mathematics", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.12", default-features = false, features = ["libm"] }
