[package]
name = "mpi-test"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi", rev = "e9b1844", default-features = false, features = ["derive"] }
necsim-core = { path = "../necsim/core", features = ["mpi"] }
