[package]
name = "necsim-classical"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core" }
necsim-impls = { path = "../necsim-impls" }
array2d = "0.2.1"
anyhow = "1.0.33"
contracts = "0.6.0"
