[package]
name = "necsim-core"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["rustacuda_core", "rustacuda_derive"]

[dependencies]
contracts = "0.6.0"
typed-builder = "0.7.0"
float_next_after = { path = "../float-next-after-no-std" }

rustacuda_core = { version = "0.1.2", optional = true }
rustacuda_derive = { version = "0.1.2", optional = true }
