[package]
name = "necsim-cuda"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda_core = "0.1.2"

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rustacuda = "0.1.2"
