[package]
name = "necsim-cuda"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core", features = ["cuda"] }
necsim-impls-no-std = { path = "../necsim-impls-no-std", features = ["cuda"] }
necsim-impls-std = { path = "../necsim-impls-std" }
necsim-impls-cuda = { path = "../necsim-impls-cuda" }
config = { path = "config" }
array2d = { path = "../array2d-no-std" }
anyhow = "1.0"
contracts = "0.6.0"
rust-cuda = { path = "../rust-cuda", features = ["host"] }
rustacuda = "0.1.2"
rustacuda_core = "0.1.2"
