[package]
name = "necsim-gillespie"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core" }
necsim-impls-no-std = { path = "../necsim-impls-no-std" }
necsim-impls-std = { path = "../necsim-impls-std" }
necsim-config = { path = "../necsim-config" }
array2d = { path = "../array2d-no-std" }
anyhow = "1.0"
contracts = "0.6.0"
