[package]
name = "necsim-impls-no-std"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core" }
necsim-cuda-derive = { path = "../necsim-cuda/necsim-cuda-derive" }
contracts = "0.6.0"
rustacuda_core = "0.1.2"

[target.'cfg(target_os = "cuda")'.dependencies]
necsim-cuda = { path = "../necsim-cuda", default-features = false, features = [] }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
necsim-cuda = { path = "../necsim-cuda", default-features = false, features = ["cpu"] }
rustacuda = "0.1.2"
