[package]
name = "necsim-impls-no-std"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["necsim-cuda", "necsim-cuda-derive", "rustacuda_core", "rustacuda_derive", "rustacuda", "array2d/cuda", "necsim-core/cuda"]

[dependencies]
necsim-core = { path = "../necsim-core" }
array2d = { path = "../array2d-no-std" }
contracts = "0.6.0"

necsim-cuda-derive = { path = "../necsim-cuda/necsim-cuda-derive", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }
rustacuda_derive = { version = "0.1.2", optional = true }

[target.'cfg(target_os = "cuda")'.dependencies]
necsim-cuda = { path = "../necsim-cuda", features = [], optional = true }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
necsim-cuda = { path = "../necsim-cuda", features = ["host"], optional = true }
rustacuda = { version = "0.1.2", optional = true }
