[package]
name = "necsim-impls-std"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core" }
necsim-impls-no-std = { path = "../necsim-impls-no-std" }
array2d = "0.2.1"
thiserror = "1.0.21"
contracts = "0.6.0"
indicatif = "0.15.0"
float_next_after = { path = "../float-next-after-no-std" }
priority-queue = "1.0.2"
