[package]
name = "necsim-linker"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptx-builder = { path = "../rust-ptx-builder" }
tempfile = "3.1.0"
quote = "1.0.7"
syn = "1.0.7"
