[package]
name = "rust-cuda-test"
version = "0.1.0"
authors = ["ml5717 <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../necsim-core" }
necsim-cuda = { path = "../necsim-cuda", default-features = false, features = ["cpu"] }
necsim-impls-no-std = { path = "../necsim-impls-no-std" }
necsim-impls-std = { path = "../necsim-impls-std" }
rustacuda = "0.1.2"
anyhow = "1.0.33"
array2d = "0.2.1"

[build-dependencies]
ptx-builder = { path = "../rust-ptx-builder" }
