[package]
name = "rustcoalescence"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
necsim-core = { path = "../necsim/core" }
necsim-core-bond = { path = "../necsim/core/bond" }
necsim-impls-no-std = { path = "../necsim/impls/no-std" }
necsim-impls-std = { path = "../necsim/impls/std" }
necsim-plugins-core = { path = "../necsim/plugins/core", features = ["import"] }
necsim-partitioning-core = { path = "../necsim/partitioning/core" }
necsim-partitioning-monolithic = { path = "../necsim/partitioning/monolithic" }

rustcoalescence-scenarios = { path = "scenarios" }
rustcoalescence-algorithms = { path = "algorithms" }

necsim-partitioning-mpi = { path = "../necsim/partitioning/mpi", optional = true }

rustcoalescence-algorithms-gillespie = { path = "algorithms/gillespie", optional = true }
rustcoalescence-algorithms-independent = { path = "algorithms/independent", optional = true }
rustcoalescence-algorithms-cuda = { path = "algorithms/cuda", optional = true }

structopt = "0.3"
anyhow = "1.0"
contracts = { git = "https://gitlab.com/MomoLangenstein/contracts", rev = "3a44375a" }
serde = { version = "1.0", features = ["derive"] }
ron = { git = "https://github.com/ron-rs/ron.git", rev = "e542eff", features = ["integer128"] }
log = { version = "0.4", features = ["std"] }
colored = "2.0"
thiserror = "1.0"
serde_path_to_error = "0.1"
serde_state = "0.4"
serde_derive_state = "0.4"
getrandom = "0.2"
bincode = "1.3"
base32 = { git = "https://github.com/andreasots/base32.git", rev = "58909ac" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
derive_builder = "0.10"
