[package]
name = "rustcoalescence"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

necsim-partitioning-mpi = ["dep:necsim-partitioning-mpi"]

rustcoalescence-algorithms-gillespie = ["dep:rustcoalescence-algorithms-gillespie"]
rustcoalescence-algorithms-independent = ["dep:rustcoalescence-algorithms-independent"]
rustcoalescence-algorithms-cuda = ["dep:rustcoalescence-algorithms-cuda", "dep:necsim-impls-cuda", "dep:rust-cuda"]

[dependencies]
necsim-core = { path = "../necsim/core" }
necsim-core-bond = { path = "../necsim/core/bond" }
necsim-impls-no-std = { path = "../necsim/impls/no-std" }
necsim-impls-cuda = { path = "../necsim/impls/cuda", optional = true }
necsim-impls-std = { path = "../necsim/impls/std" }
necsim-plugins-core = { path = "../necsim/plugins/core", features = ["import"] }
necsim-partitioning-core = { path = "../necsim/partitioning/core" }
necsim-partitioning-monolithic = { path = "../necsim/partitioning/monolithic" }

rustcoalescence-scenarios = { path = "scenarios" }
rustcoalescence-algorithms = { path = "algorithms" }

necsim-partitioning-mpi = { path = "../necsim/partitioning/mpi", optional = true }

rustcoalescence-algorithms-gillespie = { path = "algorithms/gillespie", optional = true }
rustcoalescence-algorithms-independent = { path = "algorithms/independent", optional = true }
rustcoalescence-algorithms-cuda = { path = "algorithms/cuda", optional = true }

rust-cuda = { git = "https://github.com/juntyr/rust-cuda", rev = "dd9507d", features = [], optional = true }

clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.8", features = ["integer128"] }
log = { version = "0.4", features = ["std"] }
colored = "2.0"
thiserror = "1.0"
serde_path_to_error = "0.1"
serde_state = "0.4"
serde_derive_state = "0.4"
getrandom = "0.2"
bincode = "1.3"
base32 = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
derive_builder = "0.12"
fnv = "1.0"
adler = "1.0"
