[package]
name = "rustcoalescence"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

gillespie-algorithms = ["dep:rustcoalescence-algorithms-gillespie"]
independent-algorithm = ["dep:rustcoalescence-algorithms-independent"]
cuda-algorithm = ["dep:rustcoalescence-algorithms-cuda"]

all-algorithms = ["gillespie-algorithms", "independent-algorithm", "cuda-algorithm"]

almost-infinite-normal-dispersal-scenario = [
    "rustcoalescence-scenarios/almost-infinite-normal-dispersal",
    "rustcoalescence-algorithms-cuda?/almost-infinite-normal-dispersal-scenario",
]
almost-infinite-clark2dt-dispersal-scenario = [
    "rustcoalescence-scenarios/almost-infinite-clark2dt-dispersal",
    "rustcoalescence-algorithms-cuda?/almost-infinite-clark2dt-dispersal-scenario",
]
non-spatial-scenario = [
    "rustcoalescence-scenarios/non-spatial",
    "rustcoalescence-algorithms-cuda?/non-spatial-scenario",
]
spatially-explicit-uniform-turnover-scenario = [
    "rustcoalescence-scenarios/spatially-explicit-uniform-turnover",
    "rustcoalescence-algorithms-cuda?/spatially-explicit-uniform-turnover-scenario",
]
spatially-explicit-turnover-map-scenario = [
    "rustcoalescence-scenarios/spatially-explicit-turnover-map",
    "rustcoalescence-algorithms-cuda?/spatially-explicit-turnover-map-scenario",
]
spatially-implicit-scenario = [
    "rustcoalescence-scenarios/spatially-implicit",
    "rustcoalescence-algorithms-cuda?/spatially-implicit-scenario",
]
wrapping-noise-scenario = [
    "rustcoalescence-scenarios/wrapping-noise",
    "rustcoalescence-algorithms-cuda?/wrapping-noise-scenario",
]

all-scenarios = [
    "almost-infinite-normal-dispersal-scenario",
    "almost-infinite-clark2dt-dispersal-scenario",
    "non-spatial-scenario",
    "spatially-explicit-uniform-turnover-scenario",
    "spatially-explicit-turnover-map-scenario",
    "spatially-implicit-scenario",
    "wrapping-noise-scenario",
]

mpi-partitioning = ["dep:necsim-partitioning-mpi"]
threads-partitioning = ["dep:necsim-partitioning-threads"]

all-partitioning = [
    "mpi-partitioning",
    "threads-partitioning",
]

[dependencies]
necsim-core = { path = "../necsim/core" }
necsim-core-bond = { path = "../necsim/core/bond" }
necsim-impls-no-std = { path = "../necsim/impls/no-std" }
necsim-impls-std = { path = "../necsim/impls/std" }
necsim-plugins-core = { path = "../necsim/plugins/core", features = ["import"] }
necsim-partitioning-core = { path = "../necsim/partitioning/core" }
necsim-partitioning-monolithic = { path = "../necsim/partitioning/monolithic" }

rustcoalescence-scenarios = { path = "scenarios" }
rustcoalescence-algorithms = { path = "algorithms" }

necsim-partitioning-mpi = { path = "../necsim/partitioning/mpi", optional = true }
necsim-partitioning-threads = { path = "../necsim/partitioning/threads", optional = true }

rustcoalescence-algorithms-gillespie = { path = "algorithms/gillespie", optional = true }
rustcoalescence-algorithms-independent = { path = "algorithms/independent", optional = true }
rustcoalescence-algorithms-cuda = { path = "algorithms/cuda", optional = true }

clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.8", features = ["integer128"] }
log = { version = "0.4", features = ["std"] }
colored = "2.0"
thiserror = "1.0"
serde_path_to_error = "0.1"
serde_state = "0.4"
serde_derive_state = "0.4"
getrandom = "0.2"
bincode = "1.3"
base32 = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
derive_builder = "0.20"
fnv = "1.0"
adler = "1.0"
either = "1.10"
