[package]
name = "config"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../necsim-core", features = ["cuda"] }
necsim-impls-no-std = { path = "../../necsim-impls-no-std", features = ["cuda"] }
necsim-impls-cuda = { path = "../../necsim-impls-cuda" }
rust-cuda = { path = "../../rust-cuda", features = [] }
rustacuda_core = "0.1.2"
