[package]
name = "kernel"
version = "0.1.0"
authors = ["Moritz Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ryu = "1.0.5"
necsim-core = { path = "../../necsim-core", features = ["cuda"] }
rust-cuda = { path = "../../rust-cuda", features = [] }
necsim-impls-no-std = { path = "../../necsim-impls-no-std", features = ["cuda"] }
