[package]
name = "necsim-core"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["rust-cuda"]

[dependencies]
necsim-core-maths = { path = "maths" }
necsim-core-bond = { path = "bond" }

const-type-layout = { git = "https://github.com/juntyr/const-type-layout", rev = "645de0e" }
contracts = "0.6.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[target.'cfg(target_os = "cuda")'.dependencies]
rust-cuda = { git = "https://github.com/juntyr/rust-cuda", rev = "575bc27", features = ["derive"], optional = true }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
rust-cuda = { git = "https://github.com/juntyr/rust-cuda", rev = "575bc27", features = ["derive", "host"], optional = true }
