[package]
name = "necsim-linker"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptx-builder = "0.5.3"
tempfile = "3.2.0"
quote = "1.0.9"
syn = "1.0.60"
