[package]
name = "kernel"
version = "0.1.0"
authors = ["ml5717 <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ryu = "1.0.5"
necsim-core = { path = "../../necsim-core" }
necsim-impls-no-std = { path = "../../necsim-impls-no-std" }
