[package]
name = "rustcoalescence-algorithms"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../necsim/core" }
necsim-core-bond = { path = "../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../necsim/impls/no-std" }
necsim-partitioning-core = { path = "../../necsim/partitioning/core" }
rustcoalescence-scenarios = { path = "../scenarios" }

anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
