[workspace]

[package]
name = "rustcoalescence-linker"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptx-builder = { path = "../../third-party/rust-ptx-builder" }
tempfile = "3.2.0"
quote = "1.0.9"
syn = "1.0.73"
seahash = "4.1.0"
