[package]
name = "rustcoalescence-scenarios"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
almost-infinite = []
clark = []
non-spatial = []
spatially-explicit-uniform-turnover = []
spatially-explicit-turnover-map = []
spatially-implicit = []
wrapping-noise = []

[dependencies]
necsim-core = { path = "../../necsim/core" }
necsim-core-bond = { path = "../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../necsim/impls/no-std" }
necsim-impls-std = { path = "../../necsim/impls/std" }
necsim-partitioning-core = { path = "../../necsim/partitioning/core" }

anyhow = "1.0"
thiserror = "1.0"
displaydoc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tiff = "0.9"
