[package]
name = "analysis-performance-exponential"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core", features = ["cuda"] }
necsim-core-bond = { path = "../../../necsim/core/bond", features = ["cuda"] }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }

rust-cuda = { path = "../../../rust-cuda", features = ["host"] }

contracts = { path = "../../../third-party/contracts" }
structopt = "0.3.21"

[build-dependencies]
ptx-builder = { path = "../../../third-party/rust-ptx-builder" }
