[package]
name = "analysis-performance-exponential"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core", features = ["cuda"] }
necsim-core-bond = { path = "../../../necsim/core/bond" }
necsim-core-maths = { path = "../../../necsim/core/maths" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }

rust-cuda = { git = "https://github.com/MomoLangenstein/rust-cuda", branch = "main", features = ["host"] }

contracts = { git = "https://gitlab.com/MomoLangenstein/contracts", rev = "3a44375a" }
structopt = "0.3"

[build-dependencies]
ptx-builder = { git = "https://github.com/MomoLangenstein/rust-ptx-builder", rev = "29e42e2" }
