[package]
name = "analysis-performance-reporting"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core" }
necsim-core-bond = { path = "../../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }
necsim-impls-std = { path = "../../../necsim/impls/std" }
necsim-plugins-common = { path = "../../../necsim/plugins/common" }

structopt = "0.3.21"
log = { version = "0.4.14", features = ["std"] }
colored = "2.0.0"
