[package]
name = "analysis-rng-correlation"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core" }
necsim-core-bond = { path = "../../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }

contracts = "0.6"
structopt = "0.3.21"
