[package]
name = "dieharder"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }
