[package]
name = "analysis-rng-exponential"
version = "0.1.0"
authors = ["Momo Langenstein <ml5717@ic.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core" }
necsim-core-bond = { path = "../../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }

contracts = "0.6"
structopt = "0.3.21"
