[package]
name = "analysis-rng-randomness"
version = "0.1.0"
authors = ["Momo Langenstein <momo.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
necsim-core = { path = "../../../necsim/core" }
necsim-core-bond = { path = "../../../necsim/core/bond" }
necsim-impls-no-std = { path = "../../../necsim/impls/no-std" }
necsim-impls-std = { path = "../../../necsim/impls/std" }

byte-unit = "4.0.11"
contracts = "0.6"
structopt = "0.3.21"
