[package]
name = "specialiser"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro-error = "1.0"
